# exo

./: .gitignore  ANALYSIS_AND_ROADMAP.md  ANDROID_IOS_IMPLEMENTATION_PLAN.md  ANDROID_IOS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_IMPLEMENTATION_REPORT.md  BUILD_AND_RELEASE_GUIDE.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_PHASE6.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_GPU_IMPLEMENTATION_AUDIT.md  CORRECTIONS_FOR_IMPLEMENTATION_PLAN.md  CROSS-DEVICE-INTEGRATION.md  CROSSDEVICE_IMPLEMENTATION_REVIEW.md  CROSS_DEVICE_BUILD_AUTOMATION.md  CROSS_DEVICE_COMPLETION_STATUS.md  CROSS_DEVICE_PROJECT_REVIEW.md  Cargo.toml  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_CONTINUATION_GUIDE.md  IMPLEMENTATION_DOCUMENTS_INDEX.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QUICK_START.md  IMPLEMENTATION_REVIEW_FINDINGS.md  IMPLEMENTATION_SESSION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MASTER_IMPLEMENTATION_INDEX.md  PHASE2_JNI_CHECKLIST.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE6_EXECUTION_REPORT.md  PHASE6_FINAL_REPORT.md  PHASE6_FIXES_VERIFICATION.md  PHASE6_STATUS.txt  (+16 more)
.github/workflows/: README.md  WORKFLOW_STATUS.md  build-android.yml  build-ios.yml  build-linux.yml  build-windows.yml  gpu-validation.yml  python-lint.yml  python-tests.yml  release-all-optimized.yml  release-all.yml  release.yml  test-ios-python.yml  test-ios.yml
app/android/: CMakeLists.txt  DEVELOPMENT.md  README.md  build.gradle.kts
app/android/src/main/: AndroidManifest.xml
app/android/src/main/kotlin/com/exo/gpu/: DeviceDiscovery.kt  ExoVulkanManager.kt  VulkanGpu.kt
app/android/src/main/kotlin/com/exo/gpu/services/: DeviceDiscoveryService.kt
app/android/src/native/: jni_bridge.c
app/android/src/test/kotlin/com/exo/gpu/: ExoVulkanManagerTest.kt
benchmarks/: gpu_benchmark.py  gpu_performance.py
docs/: COMPREHENSIVE_AUDIT_PLAN.md  GPU_CLUSTERING.md  GPU_INTEGRATION.md
docs/plans/: 2025-01-24-android-ios-gpu-sharing.md  2026-02-04-phase3-android-kotlin.md  2026-02-04-phase4-ios-enhancement.md  2026-02-04-phase5-python-ffi-integration.md  2026-02-04-phase6-gpu-clustering-scheduling.md
rust/exo_jni_binding/: Cargo.toml
rust/exo_jni_binding/src/: lib.rs
rust/exo_vulkan_binding/: Cargo.toml
rust/exo_vulkan_binding/src/: command.rs  lib.rs  memory.rs  transfer.rs
src/exo/gpu/: README.md  __init__.py  backend.py  clustering.py  clustering_improved.py  discovery.py  factory.py  monitoring.py  telemetry_protocol.py
src/exo/master/: main.py  placement.py  (+1 more)
tests/: cuda_validation.py  rocm_validation.py  test_gpu_clustering.py  test_telemetry_aggregation.py  test_vulkan_ffi_phase5.py
tests/integration/: test_gpu_clustering_integration.py  test_heterogeneous_desktop.py  test_ios_bridge.py  test_vulkan_backend_integration.py
(+53 files in other folders)
