[package]
name = "exo_jni_binding"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
path = "src/lib.rs"
name = "exo_jni_binding"
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
exo_vulkan_binding = { workspace = true }
jni = "0.21"
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
lazy_static = "1.4"

[dev-dependencies]
jni-sys = "0.3"
