[package]
name = "exo_vulkan_binding"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
path = "src/lib.rs"
name = "exo_vulkan_binding"
crate-type = ["rlib"]

[lints]
workspace = true

[dependencies]
ash = "0.38"           # Vulkan API bindings
parking_lot = "0.12"
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
